--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Alexander | Website">
     <!-- CSS/JS Aquivos para linkar -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cevini.github.io/alex-portfolio/style.css">
     <script src="https://kit.fontawesome.com/5d602d132f.js" crossorigin="anonymous"></script>
     <title>Alexandre | Website</title>
   </head>
@@ -61,6 +61,6 @@
         
       </article>
     </section>
-    <script src="script.js"></script>
+    <script src="https://cevini.github.io/alex-portfolio/script.js"></script>
   </body>
 </html>
