--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
     <meta name="description" content="Alexander | Website">
     <!-- CSS/JS Aquivos para linkar -->
     <link rel="stylesheet" href="https://cevini.github.io/alex-portfolio/style.css">
+    <link rel="shortcut icon" type="image/x-icon" href="https://i.imgur.com/6VBmJjr.jpg">
     <script src="https://kit.fontawesome.com/5d602d132f.js" crossorigin="anonymous"></script>
     <title>Alexandre | Website</title>
   </head>
   <body>
-    <header>
+        <header>
       <div class="nav container">
         <ul class="navbar menu">
           <li><a href="#home" class="nav-link">Início</a></li>
           <li><a href="#about" class="nav-link">Sobre</a></li>
           <li><a href="#portfolio" class="nav-link">Portfólio</a></li>
-          <li><a href="#contact" class="nav-link">Contato</a></li>
         </ul>
         <div class="menu-icon">
           <div class="line1"></div>
@@ -33,9 +33,9 @@
           <h1>Alexandre Marcelino</h1>
           <span>Produtor Musical</span>
           <div class="social">
-            <a href="#"><i class="fa-brands fa-instagram"></i></a>
-            <a href="#"><i class="fa-brands fa-youtube"></i></a>
-            <a href="#"><i class="fa-brands fa-spotify"></i></a>
+            <a href="https://www.instagram.com/alexandre_sas/"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://www.youtube.com/@alexandremarcelino2253"><i class="fa-brands fa-youtube"></i></a>
+            <a href="https://discordapp.com/users/1045875480596852757"><i class="fa-brands fa-discord"></i></a>
           </div>
         </div>
       </article>
@@ -46,21 +46,97 @@
       <h2 class="heading">Sobre Mim</h2>
       <article class="about-content container">
         <img src="https://i.imgur.com/hyI2rYh.jpg" class="about-img" alt="">
-        <p>Natural de São Roque (interior de São Paulo), Alexandre Marcelino é músico multi instrumentista, artista, compositor e produtor musical.
-          Já fez trabalho voluntário  ministrando oficinas de musicalização infantil para crianças de
-          05 a 11 anos de idade no <b>Projeto Amigo Jardim Margarida</b> pela SMF (Sociedade Movimento Dos Focolari) por 06 (seis) meses em 2019.
-          Estuda guitarra popular na Escola Municipal De Música de Vargem Grande Paulista.
-          Alexandre Marcelino também produz como autônomo trilhas sonoras para games e é fixo na game indie ZNT Productions.
-        </p>
+        <div class="about-text">
+          <p>Natural de São Roque (interior de São Paulo), Alexandre Marcelino é músico multi instrumentista, artista, compositor e produtor musical.</p>
+          <p>Já fez trabalho voluntário  ministrando oficinas de musicalização infantil para crianças de
+            05 a 11 anos de idade no <b>Projeto Amigo Jardim Margarida</b> pela SMF (Sociedade Movimento Dos Focolari) por 06 (seis) meses em 2019.</P>
+          <p>Estuda guitarra popular na Escola Municipal De Música de Vargem Grande Paulista.
+            Alexandre Marcelino também produz como autônomo trilhas sonoras para games e é fixo na game indie ZNT Productions.
+          </p>
+        </div>
       </article>
     </section>
 
     <section id="portfolio">
       <h2 class="heading-2">Trabalhos</h2>
-      <article class="portfolio-content">
-        
+      <article class="portfolio-content container">
+        <div class="card-music">
+          <h4>8 Biters - Alexandre Marcelino</h4>
+          <p>Trilha Sonora | 2022</p>
+          <audio controls src="songs/8-BITERS.wav"></audio>
+        </div>
+        <div class="card-music">
+          <h4>8 Biters - Alexandre Marcelino</h4>
+          <p>Trilha Sonora | 2022</p>
+          <audio controls src="songs/8-BITERS.wav"></audio>
+        </div>
+        <div class="card-music">
+          <h4>8 Biters - Alexandre Marcelino</h4>
+          <p>Trilha Sonora | 2022</p>
+          <audio controls src="songs/8-BITERS.wav"></audio>
+        </div>
+        <div class="card-music">
+          <h4>8 Biters - Alexandre Marcelino</h4>
+          <p>Trilha Sonora | 2022</p>
+          <audio controls src="songs/8-BITERS.wav"></audio>
+        </div>
+        <div class="card-music">
+          <h4>8 Biters - Alexandre Marcelino</h4>
+          <p>Trilha Sonora | 2022</p>
+          <audio controls src="songs/8-BITERS.wav"></audio>
+        </div>
+        <div class="card-music">
+          <h4>8 Biters - Alexandre Marcelino</h4>
+          <p>Trilha Sonora | 2022</p>
+          <audio controls src="songs/8-BITERS.wav"></audio>
+        </div>
+        <div class="card-music">
+          <h4>8 Biters - Alexandre Marcelino</h4>
+          <p>Trilha Sonora | 2022</p>
+          <audio controls src="songs/8-BITERS.wav"></audio>
+        </div>
+        <div class="card-music">
+          <h4>8 Biters - Alexandre Marcelino</h4>
+          <p>Trilha Sonora | 2022</p>
+          <audio controls src="songs/8-BITERS.wav"></audio>
+        </div>
+        <div class="card-music">
+          <h4>8 Biters - Alexandre Marcelino</h4>
+          <p>Trilha Sonora | 2022</p>
+          <audio controls src="songs/8-BITERS.wav"></audio>
+        </div>
+        <div class="card-music">
+          <h4>8 Biters - Alexandre Marcelino</h4>
+          <p>Trilha Sonora | 2022</p>
+          <audio controls src="songs/8-BITERS.wav"></audio>
+        </div>
+        <div class="card-music">
+          <h4>8 Biters - Alexandre Marcelino</h4>
+          <p>Trilha Sonora | 2022</p>
+          <audio controls src="songs/8-BITERS.wav"></audio>
+        </div>
+        <div class="card-music">
+          <h4>8 Biters - Alexandre Marcelino</h4>
+          <p>Trilha Sonora | 2022</p>
+          <audio controls src="songs/8-BITERS.wav"></audio>
+        </div>
       </article>
     </section>
+
+    <footer id="footer">
+      <article class="footer-content container">
+        <div class="footer-direct">
+          <a href="mailto:alexandrealexandre624@gmail.com">alexandrealexandre624@gmail.com</a>
+          <a class="btn" href="https://api.whatsapp.com/send?phone=5511972112605&text=Ol%C3%A1!%20Em%20que%20posso%20ajudar?"><i class="fa-brands fa-whatsapp"></i> Contate-me!</a>
+        </div>
+        <div class="footer-social">
+          <a href="https://www.instagram.com/alexandre_sas/"><i class="fa-brands fa-instagram"></i></a>
+          <a href="https://www.youtube.com/@alexandremarcelino2253"><i class="fa-brands fa-youtube"></i></a>
+          <a href="https://discordapp.com/users/1045875480596852757"><i class="fa-brands fa-discord"></i></a>
+        </div>
+      </article>
+      <a href="https://cevini.github.io/website/" class="criador">© 2022 | Vinícius Mangeth</a>
+    </footer>
     <script src="https://cevini.github.io/alex-portfolio/script.js"></script>
   </body>
 </html>
