--- a/index.html
+++ b/index.html
@@ -63,62 +63,62 @@
         <div class="card-music">
           <h4>8 Biters - Alexandre Marcelino</h4>
           <p>Trilha Sonora | 2022</p>
-          <audio controls src="songs/8-BITERS.wav"></audio>
+          <audio controls src="8-BITERS.wav"></audio>
         </div>
         <div class="card-music">
           <h4>8 Biters - Alexandre Marcelino</h4>
           <p>Trilha Sonora | 2022</p>
-          <audio controls src="songs/8-BITERS.wav"></audio>
+          <audio controls src="8-BITERS.wav"></audio>
         </div>
         <div class="card-music">
           <h4>8 Biters - Alexandre Marcelino</h4>
           <p>Trilha Sonora | 2022</p>
-          <audio controls src="songs/8-BITERS.wav"></audio>
+          <audio controls src="8-BITERS.wav"></audio>
         </div>
         <div class="card-music">
           <h4>8 Biters - Alexandre Marcelino</h4>
           <p>Trilha Sonora | 2022</p>
-          <audio controls src="songs/8-BITERS.wav"></audio>
+          <audio controls src="8-BITERS.wav"></audio>
         </div>
         <div class="card-music">
           <h4>8 Biters - Alexandre Marcelino</h4>
           <p>Trilha Sonora | 2022</p>
-          <audio controls src="songs/8-BITERS.wav"></audio>
+          <audio controls src="8-BITERS.wav"></audio>
         </div>
         <div class="card-music">
           <h4>8 Biters - Alexandre Marcelino</h4>
           <p>Trilha Sonora | 2022</p>
-          <audio controls src="songs/8-BITERS.wav"></audio>
+          <audio controls src="8-BITERS.wav"></audio>
         </div>
         <div class="card-music">
           <h4>8 Biters - Alexandre Marcelino</h4>
           <p>Trilha Sonora | 2022</p>
-          <audio controls src="songs/8-BITERS.wav"></audio>
+          <audio controls src="8-BITERS.wav"></audio>
         </div>
         <div class="card-music">
           <h4>8 Biters - Alexandre Marcelino</h4>
           <p>Trilha Sonora | 2022</p>
-          <audio controls src="songs/8-BITERS.wav"></audio>
+          <audio controls src="8-BITERS.wav"></audio>
         </div>
         <div class="card-music">
           <h4>8 Biters - Alexandre Marcelino</h4>
           <p>Trilha Sonora | 2022</p>
-          <audio controls src="songs/8-BITERS.wav"></audio>
+          <audio controls src="8-BITERS.wav"></audio>
         </div>
         <div class="card-music">
           <h4>8 Biters - Alexandre Marcelino</h4>
           <p>Trilha Sonora | 2022</p>
-          <audio controls src="songs/8-BITERS.wav"></audio>
+          <audio controls src="8-BITERS.wav"></audio>
         </div>
         <div class="card-music">
           <h4>8 Biters - Alexandre Marcelino</h4>
           <p>Trilha Sonora | 2022</p>
-          <audio controls src="songs/8-BITERS.wav"></audio>
+          <audio controls src="8-BITERS.wav"></audio>
         </div>
         <div class="card-music">
           <h4>8 Biters - Alexandre Marcelino</h4>
           <p>Trilha Sonora | 2022</p>
-          <audio controls src="songs/8-BITERS.wav"></audio>
+          <audio controls src="8-BITERS.wav"></audio>
         </div>
       </article>
     </section>
