--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Alexandre | Website</title>
   </head>
   <body>
-        <header>
+    <header>
       <div class="nav container">
         <ul class="navbar menu">
           <li><a href="#home" class="nav-link">Início</a></li>
@@ -29,14 +29,15 @@
 
     <section id="home">
       <article class="home-content container">
+        <div class="social">
+          <a href="https://www.instagram.com/alexandre_sas/"><i class="fa-brands fa-instagram"></i></a>
+          <a href="https://www.youtube.com/@alexandremarcelino2253"><i class="fa-brands fa-youtube"></i></a>
+          <a href="https://discordapp.com/users/1045875480596852757"><i class="fa-brands fa-discord"></i></a>
+        </div>
         <div class="home-text">
           <h1>Alexandre Marcelino</h1>
           <span>Produtor Musical</span>
-          <div class="social">
-            <a href="https://www.instagram.com/alexandre_sas/"><i class="fa-brands fa-instagram"></i></a>
-            <a href="https://www.youtube.com/@alexandremarcelino2253"><i class="fa-brands fa-youtube"></i></a>
-            <a href="https://discordapp.com/users/1045875480596852757"><i class="fa-brands fa-discord"></i></a>
-          </div>
+          <a class="btn" href="https://api.whatsapp.com/send?phone=5511972112605&text=Ol%C3%A1!%20Em%20que%20posso%20ajudar?"><i class="fa-brands fa-whatsapp"></i> Contate-me!</a>
         </div>
       </article>
       <img class="home-img" src="https://i.imgur.com/VHlkeZ9.jpg" alt="">
@@ -63,62 +64,62 @@
         <div class="card-music">
           <h4>8 Biters - Alexandre Marcelino</h4>
           <p>Trilha Sonora | 2022</p>
-          <audio controls src="8-BITERS.wav"></audio>
+          <audio controls src="songs/8-BITERS.wav"></audio>
         </div>
         <div class="card-music">
           <h4>8 Biters - Alexandre Marcelino</h4>
           <p>Trilha Sonora | 2022</p>
-          <audio controls src="8-BITERS.wav"></audio>
+          <audio controls src="songs/8-BITERS.wav"></audio>
         </div>
         <div class="card-music">
           <h4>8 Biters - Alexandre Marcelino</h4>
           <p>Trilha Sonora | 2022</p>
-          <audio controls src="8-BITERS.wav"></audio>
+          <audio controls src="songs/8-BITERS.wav"></audio>
         </div>
         <div class="card-music">
           <h4>8 Biters - Alexandre Marcelino</h4>
           <p>Trilha Sonora | 2022</p>
-          <audio controls src="8-BITERS.wav"></audio>
+          <audio controls src="songs/8-BITERS.wav"></audio>
         </div>
         <div class="card-music">
           <h4>8 Biters - Alexandre Marcelino</h4>
           <p>Trilha Sonora | 2022</p>
-          <audio controls src="8-BITERS.wav"></audio>
+          <audio controls src="songs/8-BITERS.wav"></audio>
         </div>
         <div class="card-music">
           <h4>8 Biters - Alexandre Marcelino</h4>
           <p>Trilha Sonora | 2022</p>
-          <audio controls src="8-BITERS.wav"></audio>
+          <audio controls src="songs/8-BITERS.wav"></audio>
         </div>
         <div class="card-music">
           <h4>8 Biters - Alexandre Marcelino</h4>
           <p>Trilha Sonora | 2022</p>
-          <audio controls src="8-BITERS.wav"></audio>
+          <audio controls src="songs/8-BITERS.wav"></audio>
         </div>
         <div class="card-music">
           <h4>8 Biters - Alexandre Marcelino</h4>
           <p>Trilha Sonora | 2022</p>
-          <audio controls src="8-BITERS.wav"></audio>
+          <audio controls src="songs/8-BITERS.wav"></audio>
         </div>
         <div class="card-music">
           <h4>8 Biters - Alexandre Marcelino</h4>
           <p>Trilha Sonora | 2022</p>
-          <audio controls src="8-BITERS.wav"></audio>
+          <audio controls src="songs/8-BITERS.wav"></audio>
         </div>
         <div class="card-music">
           <h4>8 Biters - Alexandre Marcelino</h4>
           <p>Trilha Sonora | 2022</p>
-          <audio controls src="8-BITERS.wav"></audio>
+          <audio controls src="songs/8-BITERS.wav"></audio>
         </div>
         <div class="card-music">
           <h4>8 Biters - Alexandre Marcelino</h4>
           <p>Trilha Sonora | 2022</p>
-          <audio controls src="8-BITERS.wav"></audio>
+          <audio controls src="songs/8-BITERS.wav"></audio>
         </div>
         <div class="card-music">
           <h4>8 Biters - Alexandre Marcelino</h4>
           <p>Trilha Sonora | 2022</p>
-          <audio controls src="8-BITERS.wav"></audio>
+          <audio controls src="songs/8-BITERS.wav"></audio>
         </div>
       </article>
     </section>
