--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="home-text">
           <h1>Alexandre Marcelino</h1>
           <span>Produtor Musical</span>
-          <a class="btn" href="https://api.whatsapp.com/send?phone=5511972112605&text=Ol%C3%A1!%20Em%20que%20posso%20ajudar?"><i class="fa-brands fa-whatsapp"></i> Contate-me!</a>
+          <a class="btn" href="https://api.whatsapp.com/send?phone=5511972112605&text=Ol%C3%A1!%20Gostaria%20de%20realizar%20um%20projeto%20com%20voc%C3%AA!"><i class="fa-brands fa-whatsapp"></i> Contate-me!</a>
         </div>
       </article>
       <img class="home-img" src="https://i.imgur.com/VHlkeZ9.jpg" alt="">
@@ -128,7 +128,7 @@
       <article class="footer-content container">
         <div class="footer-direct">
           <a href="mailto:alexandrealexandre624@gmail.com">alexandrealexandre624@gmail.com</a>
-          <a class="btn" href="https://api.whatsapp.com/send?phone=5511972112605&text=Ol%C3%A1!%20Em%20que%20posso%20ajudar?"><i class="fa-brands fa-whatsapp"></i> Contate-me!</a>
+          <a class="btn" href="https://api.whatsapp.com/send?phone=5511972112605&text=Ol%C3%A1!%20Gostaria%20de%20realizar%20um%20projeto%20com%20voc%C3%AA!"><i class="fa-brands fa-whatsapp"></i> Contate-me!</a>
         </div>
         <div class="footer-social">
           <a href="https://www.instagram.com/alexandre_sas/"><i class="fa-brands fa-instagram"></i></a>
