--- a/index.html
+++ b/index.html
@@ -62,64 +62,14 @@
       <h2 class="heading-2">Trabalhos</h2>
       <article class="portfolio-content container">
         <div class="card-music">
-          <h4>8 Biters - Alexandre Marcelino</h4>
+          <h4>teste1 - Alexandre Marcelino</h4>
           <p>Trilha Sonora | 2022</p>
-          <audio controls src="songs/8-BITERS.wav"></audio>
+          <audio controls src="teste 1.wav"></audio>
         </div>
         <div class="card-music">
           <h4>8 Biters - Alexandre Marcelino</h4>
           <p>Trilha Sonora | 2022</p>
-          <audio controls src="songs/8-BITERS.wav"></audio>
-        </div>
-        <div class="card-music">
-          <h4>8 Biters - Alexandre Marcelino</h4>
-          <p>Trilha Sonora | 2022</p>
-          <audio controls src="songs/8-BITERS.wav"></audio>
-        </div>
-        <div class="card-music">
-          <h4>8 Biters - Alexandre Marcelino</h4>
-          <p>Trilha Sonora | 2022</p>
-          <audio controls src="songs/8-BITERS.wav"></audio>
-        </div>
-        <div class="card-music">
-          <h4>8 Biters - Alexandre Marcelino</h4>
-          <p>Trilha Sonora | 2022</p>
-          <audio controls src="songs/8-BITERS.wav"></audio>
-        </div>
-        <div class="card-music">
-          <h4>8 Biters - Alexandre Marcelino</h4>
-          <p>Trilha Sonora | 2022</p>
-          <audio controls src="songs/8-BITERS.wav"></audio>
-        </div>
-        <div class="card-music">
-          <h4>8 Biters - Alexandre Marcelino</h4>
-          <p>Trilha Sonora | 2022</p>
-          <audio controls src="songs/8-BITERS.wav"></audio>
-        </div>
-        <div class="card-music">
-          <h4>8 Biters - Alexandre Marcelino</h4>
-          <p>Trilha Sonora | 2022</p>
-          <audio controls src="songs/8-BITERS.wav"></audio>
-        </div>
-        <div class="card-music">
-          <h4>8 Biters - Alexandre Marcelino</h4>
-          <p>Trilha Sonora | 2022</p>
-          <audio controls src="songs/8-BITERS.wav"></audio>
-        </div>
-        <div class="card-music">
-          <h4>8 Biters - Alexandre Marcelino</h4>
-          <p>Trilha Sonora | 2022</p>
-          <audio controls src="songs/8-BITERS.wav"></audio>
-        </div>
-        <div class="card-music">
-          <h4>8 Biters - Alexandre Marcelino</h4>
-          <p>Trilha Sonora | 2022</p>
-          <audio controls src="songs/8-BITERS.wav"></audio>
-        </div>
-        <div class="card-music">
-          <h4>8 Biters - Alexandre Marcelino</h4>
-          <p>Trilha Sonora | 2022</p>
-          <audio controls src="songs/8-BITERS.wav"></audio>
+          <audio controls src="8-BITERS.wav"></audio>
         </div>
       </article>
     </section>
