--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <h2 class="heading-2">Trabalhos</h2>
       <article class="portfolio-content container">
         <div class="card-music">
-          <h4>teste1 - Alexandre Marcelino</h4>
+          <h4>anguish - Alexandre Marcelino</h4>
           <p>Trilha Sonora | 2022</p>
           <audio controls src="teste 1.wav"></audio>
         </div>
